On branch main Your branch is up to date with 'origin/main'. Changes to be committed: modified:   index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Ario Barzan CeeVee</title>
+	<title>About Me</title>
 	<meta name="description" content="Ario Barzan's resume">
 	<meta name="author" content="Ario Barzan">
 
@@ -103,7 +103,7 @@
 
             <div class="row">
 
-               <div style="display: none;" class="columns contact-details">
+               <div class="columns contact-details">
 
                   <h2>Contact Details</h2>
                   <p class="address">
@@ -118,7 +118,7 @@
                </div>
 
                <div class="columns download">
-                  <p style="display: none;">
+                  <p>
                      <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
@@ -136,59 +136,6 @@
    ================================================== -->
    <section id="resume">
 
-      <!-- Education
-      ----------------------------------------------- -->
-      <div style="display: none;" class="row education">
-
-         <div class="three columns header-col">
-            <h1><span>Education</span></h1>
-         </div>
-
-         <div class="nine columns main-col">
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>University of Life</h3>
-                  <p class="info">Master in Life Philosophy <span>&bull;</span> <em class="date">April 2030</em></p>
-
-                  <p>
-                  WHO NEEDS Education??
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
-                  </p>
-
-               </div>
-
-            </div> <!-- item end -->
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>School of Cool Developers</h3>
-                  <p class="info">B.A. Degree in Death <span>&bull;</span> <em class="date">March 1999</em></p>
-
-                  <p>
-                  LOSERS
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
-                  </p>
-
-               </div>
-
-            </div> <!-- item end -->
-
-         </div> <!-- main-col end -->
-
-      </div> <!-- End Education -->
-
-
       <!-- Work
       ----------------------------------------------- -->
       <div class="row work">
@@ -204,7 +151,7 @@
                <div class="twelve columns">
 
                   <h3>Aizheimer Startup Company</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+                  <p class="info">CTO <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
 
                   <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -222,7 +169,7 @@
                <div class="twelve columns">
 
                   <h3>Anatomyar Startup Company</h3>
-                  <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
+                  <p class="info">CTO <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
 
                   <p>
                   This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
@@ -389,6 +336,56 @@
 
 
       </div> <!-- End skills -->
+
+      <!-- Education
+      ----------------------------------------------- -->
+      <div class="row education">
+
+         <div class="three columns header-col">
+            <h1><span>Professional Certificates</span></h1>
+         </div>
+
+         <div class="nine columns main-col">
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>University of Life</h3>
+                  <p class="info">Master in Life Philosophy <span>&bull;</span> <em class="date">April 2030</em></p>
+
+                  <p>
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
+                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>School of Cool Developers</h3>
+                  <p class="info">B.A. Degree in Death <span>&bull;</span> <em class="date">March 1999</em></p>
+
+                  <p>
+                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
+                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
+                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
+                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+         </div> <!-- main-col end -->
+
+      </div> <!-- End Education -->
 
    </section> <!-- Resume Section End-->
 
