--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Ario Barzan.</h1>
-            <h3>I'm a <span>cybersecurity expert</span>, <span>full-stack web developer</span> and <span>game designer</span> creating awesome and
-            effective visual identities for companies of all sizes while protecting their digital infrastructure around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h3>I'm a <span>cybersecurity expert</span>, <span>full-stack web developer</span> and <span>game developer</span> creating awesome and
+            effective visual identities for companies of all sizes while protecting their digital infrastructure around the globe. <a class="smoothscroll" href="#about">Start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
@@ -351,7 +351,7 @@
 
                <div class="twelve columns">
 
-                  <h3>University of Life</h3>
+                  <h3></h3>
                   <p class="info">Master in Life Philosophy <span>&bull;</span> <em class="date">April 2030</em></p>
 
                   <p>
