Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit. On branch main Your branch is up to date with 'origin/main'. Changes to be committed: modified:   index.html

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       <div class="row skill">
 
          <div class="three columns header-col">
-            <h1><span>Developer Skills</span></h1>
+            <h1><span>Developer</span></h1>
          </div>
 
          <div class="nine columns main-col">
@@ -302,7 +302,7 @@
 
 
          <div class="three columns header-col">
-            <h1><span>cybersecurity Skills</span></h1>
+            <h1><span>cybersecurity</span></h1>
          </div>
 
          <div class="nine columns main-col">
@@ -342,7 +342,7 @@
       <div class="row education">
 
          <div class="three columns header-col">
-            <h1><span>Professional Certificates</span></h1>
+            <h1><span>Certificates</span></h1>
          </div>
 
          <div class="nine columns main-col">
@@ -410,8 +410,8 @@
                         <img alt="" src="images/portfolio/coffee.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Coffee</h5>
-                              <p>Illustrration</p>
+          					      <h5>Neon Carnage</h5>
+                              <p>Godot 4</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -427,7 +427,7 @@
                         <img alt="" src="images/portfolio/console.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Console</h5>
+          					      <h5>Anatomyar</h5>
                               <p>Web Development</p>
           					   </div>
                         </div>
@@ -444,8 +444,8 @@
                         <img alt="" src="images/portfolio/judah.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Judah</h5>
-                              <p>Webdesign</p>
+          					      <h5>Aizheimer</h5>
+                              <p>Web Development</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -461,8 +461,8 @@
                         <img alt="" src="images/portfolio/into-the-light.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Into The Light</h5>
-                              <p>Photography</p>
+          					      <h5>OrangNano</h5>
+                              <p>Web Development</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
